# CyberBugEngine

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  buffer.cpp  buffer.hpp  main.cpp  object.cpp  object.hpp  render.cpp  render.hpp
tests/: CMakeLists.txt  test.cpp  test_object.cpp  test_render.cpp
